{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 2675,
  "lineage": "1d1aff4c-1cf2-33a7-c7b8-2c17664f7ff9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-056c069a3e9a04d20",
            "domain": "vpc",
            "id": "eipalloc-056c069a3e9a04d20",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-221-142-21.compute-1.amazonaws.com",
            "public_ip": "54.221.142.21",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig-vpc_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09cfd9444b8dadb0b",
            "domain": "vpc",
            "id": "eipalloc-09cfd9444b8dadb0b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-213-226-139.compute-1.amazonaws.com",
            "public_ip": "44.213.226.139",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig-vpc_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nginx_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dfa28a02230b4f74",
            "domain": "vpc",
            "id": "eipalloc-0dfa28a02230b4f74",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-206-248-124.compute-1.amazonaws.com",
            "public_ip": "52.206.248.124",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:400926585409:instance/i-02cba2c77ecb6940a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02cba2c77ecb6940a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jan2023",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01ea29cc06be6c048",
            "private_dns": "ip-10-1-2-70.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02eb2ba51050577ff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec415818d66d0913",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f837bdd9ee45b0fe"
            ]
          },
          "dependencies": [
            "aws_security_group.instance_security_group",
            "aws_subnet.private_subnet_b_1",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig-vpc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:internet-gateway/igw-0b822ff472bb3bff2",
            "id": "igw-0b822ff472bb3bff2",
            "owner_id": "400926585409",
            "tags": {
              "Name": "ig-vpc a"
            },
            "tags_all": {
              "Name": "ig-vpc a"
            },
            "vpc_id": "vpc-0beec2d31d86e3c2c"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig-vpc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:internet-gateway/igw-0f09bb053bacfef73",
            "id": "igw-0f09bb053bacfef73",
            "owner_id": "400926585409",
            "tags": {
              "Name": "ig-vpc b"
            },
            "tags_all": {
              "Name": "ig-vpc b"
            },
            "vpc_id": "vpc-0a3af6d4e8f53f9a3"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc-a-nat-gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-056c069a3e9a04d20",
            "connectivity_type": "public",
            "id": "nat-034f4355c05b55966",
            "network_interface_id": "eni-05b55760108d3a3d0",
            "private_ip": "10.0.1.89",
            "public_ip": "54.221.142.21",
            "subnet_id": "subnet-091ff7fb962b7d0c8",
            "tags": {
              "Name": "vpc-a-nat-gw1"
            },
            "tags_all": {
              "Name": "vpc-a-nat-gw1"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.ig-vpc_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc-b-nat-gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09cfd9444b8dadb0b",
            "connectivity_type": "public",
            "id": "nat-05a5cd0ffdc74303c",
            "network_interface_id": "eni-02eb8ef7108ab0eca",
            "private_ip": "10.1.1.211",
            "public_ip": "44.213.226.139",
            "subnet_id": "subnet-0e89969449cf76aed",
            "tags": {
              "Name": "vpc-b-nat-gw2"
            },
            "tags_all": {
              "Name": "vpc-b-nat-gw2"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.ig-vpc_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-a-1-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:route-table/rtb-00ce3fd44f7ca80f3",
            "id": "rtb-00ce3fd44f7ca80f3",
            "owner_id": "400926585409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-034f4355c05b55966",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-a-1-private"
            },
            "tags_all": {
              "Name": "vpc-a-1-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0beec2d31d86e3c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.ig-vpc_a",
            "aws_nat_gateway.vpc-a-nat-gw1",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-a-2-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:route-table/rtb-02cd270b2384a3ac5",
            "id": "rtb-02cd270b2384a3ac5",
            "owner_id": "400926585409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-034f4355c05b55966",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-a-2-private"
            },
            "tags_all": {
              "Name": "vpc-a-2-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0beec2d31d86e3c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.ig-vpc_a",
            "aws_nat_gateway.vpc-a-nat-gw1",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:route-table/rtb-0cbe903b96367ce63",
            "id": "rtb-0cbe903b96367ce63",
            "owner_id": "400926585409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b822ff472bb3bff2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-a-public"
            },
            "tags_all": {
              "Name": "vpc-a-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0beec2d31d86e3c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig-vpc_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-b-1-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:route-table/rtb-08c0cf069546fec60",
            "id": "rtb-08c0cf069546fec60",
            "owner_id": "400926585409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05a5cd0ffdc74303c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-b-1-private"
            },
            "tags_all": {
              "Name": "vpc-b-1-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3af6d4e8f53f9a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.ig-vpc_b",
            "aws_nat_gateway.vpc-b-nat-gw2",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-b-2-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:route-table/rtb-04fcbcc59e97bfd35",
            "id": "rtb-04fcbcc59e97bfd35",
            "owner_id": "400926585409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05a5cd0ffdc74303c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-b-2-private"
            },
            "tags_all": {
              "Name": "vpc-b-2-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3af6d4e8f53f9a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.ig-vpc_b",
            "aws_nat_gateway.vpc-b-nat-gw2",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-b-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:route-table/rtb-069eb21022d85ef03",
            "id": "rtb-069eb21022d85ef03",
            "owner_id": "400926585409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f09bb053bacfef73",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-b-public"
            },
            "tags_all": {
              "Name": "vpc-b-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3af6d4e8f53f9a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig-vpc_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-a-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03309b58531912343",
            "route_table_id": "rtb-00ce3fd44f7ca80f3",
            "subnet_id": "subnet-039ffe17a30c1fa8d"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.ig-vpc_a",
            "aws_nat_gateway.vpc-a-nat-gw1",
            "aws_route_table.vpc-a-1-private",
            "aws_subnet.private_subnet_a_1",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-a-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04583a77ab44c0eea",
            "route_table_id": "rtb-02cd270b2384a3ac5",
            "subnet_id": "subnet-0c65b0f8020591df0"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.ig-vpc_a",
            "aws_nat_gateway.vpc-a-nat-gw1",
            "aws_route_table.vpc-a-2-private",
            "aws_subnet.private_subnet_a_2",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-b-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0118b4883e364f673",
            "route_table_id": "rtb-08c0cf069546fec60",
            "subnet_id": "subnet-0ec415818d66d0913"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.ig-vpc_b",
            "aws_nat_gateway.vpc-b-nat-gw2",
            "aws_route_table.vpc-b-1-private",
            "aws_subnet.private_subnet_b_1",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-b-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c7177593e447e5e",
            "route_table_id": "rtb-04fcbcc59e97bfd35",
            "subnet_id": "subnet-03c82914cc63b8e4c"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.ig-vpc_b",
            "aws_nat_gateway.vpc-b-nat-gw2",
            "aws_route_table.vpc-b-2-private",
            "aws_subnet.private_subnet_b_2",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d494198f80475349",
            "route_table_id": "rtb-0cbe903b96367ce63",
            "subnet_id": "subnet-091ff7fb962b7d0c8"
          },
          "dependencies": [
            "aws_internet_gateway.ig-vpc_a",
            "aws_route_table.vpc-a-public",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_b_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079712cad9642034c",
            "route_table_id": "rtb-069eb21022d85ef03",
            "subnet_id": "subnet-0e89969449cf76aed"
          },
          "dependencies": [
            "aws_internet_gateway.ig-vpc_b",
            "aws_route_table.vpc-b-public",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:security-group/sg-0f837bdd9ee45b0fe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f837bdd9ee45b0fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instance-sg20230327000105311900000005",
            "name_prefix": "instance-sg",
            "owner_id": "400926585409",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a3af6d4e8f53f9a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:subnet/subnet-039ffe17a30c1fa8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039ffe17a30c1fa8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "400926585409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet A 1"
            },
            "tags_all": {
              "Name": "Private Subnet A 1"
            },
            "vpc_id": "vpc-0beec2d31d86e3c2c"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:subnet/subnet-0c65b0f8020591df0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c65b0f8020591df0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "400926585409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet A 2"
            },
            "tags_all": {
              "Name": "Private Subnet A 2"
            },
            "vpc_id": "vpc-0beec2d31d86e3c2c"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:subnet/subnet-0ec415818d66d0913",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec415818d66d0913",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "400926585409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet B 1"
            },
            "tags_all": {
              "Name": "Private Subnet B 1"
            },
            "vpc_id": "vpc-0a3af6d4e8f53f9a3"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:subnet/subnet-03c82914cc63b8e4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c82914cc63b8e4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "400926585409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet B 2"
            },
            "tags_all": {
              "Name": "Private Subnet B 2"
            },
            "vpc_id": "vpc-0a3af6d4e8f53f9a3"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:subnet/subnet-091ff7fb962b7d0c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091ff7fb962b7d0c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "400926585409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet A"
            },
            "tags_all": {
              "Name": "Public Subnet A"
            },
            "vpc_id": "vpc-0beec2d31d86e3c2c"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:subnet/subnet-0e89969449cf76aed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e89969449cf76aed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "400926585409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet B"
            },
            "tags_all": {
              "Name": "Public Subnet B"
            },
            "vpc_id": "vpc-0a3af6d4e8f53f9a3"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:vpc/vpc-0beec2d31d86e3c2c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0536d5c31941d6585",
            "default_route_table_id": "rtb-08997eced82010636",
            "default_security_group_id": "sg-0e2a639e0a5165021",
            "dhcp_options_id": "dopt-072422efc549b62a8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0beec2d31d86e3c2c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08997eced82010636",
            "owner_id": "400926585409",
            "tags": {
              "Name": "VPC A"
            },
            "tags_all": {
              "Name": "VPC A"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:vpc/vpc-0a3af6d4e8f53f9a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-041a34a6e7ee4e2e2",
            "default_route_table_id": "rtb-0a76bbee335921ba7",
            "default_security_group_id": "sg-0bc8fdbecfce4c830",
            "dhcp_options_id": "dopt-072422efc549b62a8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a3af6d4e8f53f9a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a76bbee335921ba7",
            "owner_id": "400926585409",
            "tags": {
              "Name": "VPC B"
            },
            "tags_all": {
              "Name": "VPC B"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-05b265f54004945ca",
            "peer_owner_id": "400926585409",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0a3af6d4e8f53f9a3",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "VPC Peering between vpc_b and vpc_a"
            },
            "tags_all": {
              "Name": "VPC Peering between vpc_b and vpc_a"
            },
            "vpc_id": "vpc-0beec2d31d86e3c2c"
          },
          "dependencies": [
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]"
    }
  ]
}